<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Huaxin</string>
    <string name="hello_world">HOLA 亲!</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_main">最专业的海外华人信息平台!</string>
    <string name="title_activity_list">Huaxin</string>
    <string name="title_search">信息搜索</string>
    <string name="title_whatyousearch">您找什么?</string>
    <string name="title_description">描述</string>
    <string name="title_category">目录</string>
    <string name="title_location">地点</string>
    <string name="search_keywords">输入关键词</string>
    <string name="phone_or_email">电话或邮箱</string>
    <string name="reg_phone">电话号码</string>
    <string name="reg_email">邮箱</string>
    <string name="password">密码</string>
    <string name="confirm_password">密码确认</string>
    <string name="welcome_back">欢迎回来。 </string>
    <string name="logout_ok">成功登出!</string>
    <string name="btn_search">搜索</string>
    <string name="btn_new_ad">发布信息</string>
    <string name="descr_logo">HUAXIN Logo</string>
    <string name="descr_publi">HUAXIN 广告</string>
    <string name="descr_img">图片</string>
    <string name="loading">正在启动...</string>
    <string name="anuncios">信息</string>
    <string name="credits">积分</string>
    <string name="username">用户名</string>
    <string name="new_search">重新搜索</string>
    <string name="favorites">收藏夹</string>
    <string name="new_ad">新信息</string>
    <string name="my_ads">我的信息</string>
    <string name="buy_credits">购买积分</string>
    <string name="login">登录</string>
    <string name="logout">登出</string>
    <string name="register">注册</string>
    <string name="share_via">分享</string>
    <string name="share_subject">来自华信的信息</string>
    <string name="title">标题</string>
    <string name="description">描述</string>
    <string name="price">价格</string>
    <string name="premium">推广</string>
    <string name="phone">电话号码</string>
    <string name="location">地点</string>
    <string name="username_notblank">用户名不能为空。</string>
    <string name="password_notblank">密码不能为空。</string>
    <string name="error_no_favs">您没有任何收藏。</string>
    <string name="need_login">您需要登录。</string>
    <string name="query_null">您需要填写搜索内容。</string>
    <string name="query_short">最少需要两个字符。</string>
    <string name="fill_all_fields">请填写所有的空格。</string>
    <string name="all_fields_required">所有的空格是必须要填写的。</string>
    <string name="pwd_not_match">密码不正确。</string>
    <string name="comm_error">通讯出错。</string>
    <string name="unknown_error">未知的错误。</string>
    <string name="one_week">1 周</string>
    <string name="two_weeks">2 周</string>
    <string name="one_month">1 个月</string>
    <string name="two_months">2 个月</string>
    <string name="one_year">1 年</string>
    <string name="action_edit">编辑</string>
    <string name="action_delete">删除</string>
    <string name="action_menu">Menu</string>
    <string name="title_phone">电话号码</string>
    <string name="total_credits">积分总数</string>
    <string name="duration">发布期限</string>
    <string name="subir_foto">上传图片</string>
    <string name="error_compra">购买出错。</string>
    <string name="error_validation">用户验证出错。</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="confirm_delete">你确认删除吗？这个操作将不能撤销。</string>
    <string name="confirm_deletion">请确认删除</string>
    <string name="select_picture">选择图片</string>
    <string name="camera">拍照</string>
    <string name="gallery">手机相册</string>
    <string name="choose_image_source">选择照片来源</string>
    
    <string name="no_internet">没有网络连接！</string>

</resources>