<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/layout_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp" >

            <EditText
                android:id="@+id/txt_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/title"
                android:singleLine="true" >
            </EditText>

            <EditText
                android:id="@+id/txt_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/description" >
            </EditText>

            <Spinner
                android:id="@+id/spin_categories"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="2dp" />

            <EditText
                android:id="@+id/txt_price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:singleLine="true" >
            </EditText>

            <EditText
                android:id="@+id/txt_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:singleLine="true" >
            </EditText>

            <EditText
                android:id="@+id/txt_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/location"
                android:singleLine="true" >
            </EditText>

            <TextView
                android:id="@+id/lbl_duration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Duration" />

            <SeekBar
                android:id="@+id/seek_duration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/total_duration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="1 día" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txt_label_premium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dip"
                    android:text="Premium"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/toggle_premium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txt_label_premium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="15dip"
                    android:layout_toLeftOf="@+id/total_credits"
                    android:text="Total credits"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_credits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dip"
                    android:text="25"
                    android:textColor="@color/blue"
                    android:textSize="10pt"
                    android:textStyle="bold" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_new_ad"
                style="@style/blue_button"
                android:text="@string/btn_new_ad" />
        </LinearLayout>
    </ScrollView>

    <com.devspark.sidenavigation.SideNavigationView
        android:id="@+id/side_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
    </com.devspark.sidenavigation.SideNavigationView>

</RelativeLayout>